[gd_scene load_steps=5 format=3 uid="uid://2o232aet0mg3"]

[ext_resource type="Script" uid="uid://5io3rm0ge3pw" path="res://src/game_over_menu.gd" id="1_ccgoi"]
[ext_resource type="StyleBox" uid="uid://cnrtf6vbo512a" path="res://resources/menu_style.tres" id="1_cwb3k"]
[ext_resource type="StyleBox" uid="uid://q323yqe6difc" path="res://resources/menu_button_normal.tres" id="3_ccgoi"]
[ext_resource type="AudioStream" uid="uid://ij78da8o0twu" path="res://assets/gameover.ogg" id="4_81acl"]

[node name="GameOverMenu" type="Control"]
process_mode = 2
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ccgoi")

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_bottom = 1.0
offset_left = -16.0
grow_vertical = 2
theme_override_styles/panel = ExtResource("1_cwb3k")

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer"]
layout_mode = 2
theme_override_constants/separation = 16
alignment = 1

[node name="Label" type="Label" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.933333, 0.933333, 0.823529, 1)
theme_override_font_sizes/font_size = 48
text = "Game Over!"
horizontal_alignment = 1

[node name="WaveLabel2" type="Label" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.933333, 0.933333, 0.823529, 1)
theme_override_font_sizes/font_size = 32
text = "You made it to"
horizontal_alignment = 1

[node name="WaveLabel" type="Label" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.933333, 0.933333, 0.823529, 1)
theme_override_font_sizes/font_size = 32
text = "Wave: 1"
horizontal_alignment = 1

[node name="NewGameBtn" type="Button" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.462745, 0.588235, 0.337255, 1)
theme_override_colors/font_focus_color = Color(0.462745, 0.588235, 0.337255, 1)
theme_override_font_sizes/font_size = 32
theme_override_styles/normal = ExtResource("3_ccgoi")
text = "New Game"

[node name="ExitToMainBtn" type="Button" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.462745, 0.588235, 0.337255, 1)
theme_override_colors/font_focus_color = Color(0.462745, 0.588235, 0.337255, 1)
theme_override_font_sizes/font_size = 32
theme_override_styles/normal = ExtResource("3_ccgoi")
text = "Exit to Main Menu"

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_81acl")
autoplay = true

[connection signal="pressed" from="PanelContainer/VBoxContainer/NewGameBtn" to="." method="_on_new_game_btn_pressed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/ExitToMainBtn" to="." method="_on_exit_to_main_btn_pressed"]
